boolean field sync